scrollbar color fix

--- a/css/style.scss
+++ b/css/style.scss
@@ -14,6 +14,17 @@ $tertiary: var(--tertiary);
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+
+    &::-webkit-scrollbar {
+        background-color: $background;
+        width: 10px;
+
+        &-thumb {
+            background-color: $button;
+            width: 5px;
+            border-radius: 10px;
+        }
+    }
 }
 
 html {
